# socratic-tutor-agent

./: .dockerignore  .env-example  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  persona_results.txt  pyproject.toml
agent/: cli_test.py  graph.py  nodes.py  state.py
core/: api.py  cli_test.py  graph.py  models.py  nodes.py  openwebui_pipe.py  persona_test.py  state.py
